--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 services:
   productservice:
     build: product-service
+  web:
+    build: nginx
     ports:
-      - "5000:5000"
+      - "80:80"
+  db:
+    image: mysql
+    command: "--init-file /data/application/init.sql --default-authentication-plugin=mysql_native_password"
+    volumes:
+      - "./db/init.sql:/data/application/init.sql"
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
